[package]
name = "simple-mini-db"
version = "0.2.0"
authors = ["Bogdan Yachmenev <yachmenevbogdan350@gmail.com>"]
edition = "2024"
description = "Minimal database format and database lib"
readme = "README.md"
repository = "https://github.com/BogdanUser404/Simple-Mini-Database"
license = "MPL-2.0"
keywords = ["database","binary", "storage"]
categories = ["database"]

[dependencies]
#None

[lib]
name = "smdb"
path = "src/lib.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
